intégration wireframe header

--- a/scss/colors.scss
+++ b/scss/colors.scss
@@ -1,3 +1,6 @@
+$bleu: darkcyan;
+$gris: #232323;
+$gris-moyen: #727272;
+$gris-light: #C4C4C4;
+$rouge: red;
 $white: #FFFFDD;
-$blue: darkcyan;
-$red: red;
