--- a/scss/main.scss
+++ b/scss/main.scss
@@ -18,6 +18,15 @@ h1 {
 h2 {
     font-size: 1.5rem;
 }
+h3 {
+    font-size: 1.17rem;
+}
+ul {
+    padding: 0;
+    li {
+        list-style-type: none;
+    }
+}
 a {
     text-decoration: none;
     color: unset;
