--- a/scss/footer.scss
+++ b/scss/footer.scss
@@ -2,21 +2,25 @@ footer {
     background-color: $gris-light;
     color: white;
     .footer-content {
-        height: 300px;
-        padding-top: 50px;
+        height: 400px;
+        padding-top: 80px;
         align-items: flex-start;
         section {
             width: 20%;
+            padding: 0 20px;
+            h2 {
+                font-size: 1.5rem;
+            }
             &:not(:last-child) {
                 ul {
-                    line-height: 1.5rem;
+                    line-height: 2rem;
                     li:not(:last-child) {
                         padding-bottom: 20px;
                     }
                 }
             }
             &:last-child {
-                width: 16%;
+
                 ul {
                     justify-content: space-between;
                 }
@@ -29,7 +33,7 @@ footer {
         border-top: 1px solid $gris-moyen;
         text-transform: uppercase;
         text-align: center;
-        font-size: 0.7rem;
+        font-size: 1rem;
         color: $gris-moyen;
     }
 }
