maj landing version maquette

--- a/scss/colors.scss
+++ b/scss/colors.scss
@@ -1,6 +1,6 @@
-$bleu: darkcyan;
-$gris: #232323;
-$gris-moyen: #727272;
-$gris-light: #C4C4C4;
-$rouge: red;
-$white: #FFFFDD;
+$creme: #fcfbea;
+$canari: #ffbd36;
+$mauve: #ccb0ff;
+$violet: #61269e;
+$noir: #1d0c1f;
+$blanc: #ffffff;
