--- a/scss/footer.scss
+++ b/scss/footer.scss
@@ -1,28 +1,39 @@
 footer {
-    background-color: $gris-light;
+    background-color: $violet;
     color: white;
     .footer-content {
+        max-width: 720px;
         height: 400px;
+        margin: auto;
         padding-top: 80px;
         align-items: flex-start;
+        justify-content: space-between;
         section {
-            width: 20%;
-            padding: 0 20px;
+            width: 38%;
             h2 {
+                color: $canari;
                 font-size: 1.5rem;
             }
-            &:not(:last-child) {
-                ul {
-                    line-height: 2rem;
-                    li:not(:last-child) {
-                        padding-bottom: 20px;
-                    }
+            ul {
+                line-height: 2rem;
+                padding: 0 40px 0 0;
+                li:not(:last-child) {
+                    padding-bottom: 20px;
                 }
             }
-            &:last-child {
-
-                ul {
-                    justify-content: space-between;
+            &.footer-social-media {
+                width: 24%;
+                div {
+                    padding: 0 20px 0 0;
+                    justify-content: flex-start;
+                    a {
+                        &:not(:last-child) {
+                            padding-right: 25px;
+                        }
+                        img {
+                            width: 30px;
+                        }
+                    }
                 }
             }
         }
@@ -30,10 +41,10 @@ footer {
     .copyright {
         margin: auto;
         padding: 20px 0;
-        border-top: 1px solid $gris-moyen;
+        border-top: 1px solid $violet;
         text-transform: uppercase;
         text-align: center;
         font-size: 1rem;
-        color: $gris-moyen;
+        color: $blanc;
     }
 }
