--- a/scss/header.scss
+++ b/scss/header.scss
@@ -1,19 +1,24 @@
 header {
     height: 100vh;
-    background-color: $gris-light;
+    background-color: $creme;
     nav {
         width: 100%;
         height: 90px;
         padding: 0 80px;
         position: fixed;
         z-index: 99;
-        border: 1px solid $gris;
         justify-content: space-between;
         align-items: center;
-        background-color: $gris-light;
+        background-color: $creme;
+        .nav-logo {
+            height: 100%;
+            img {
+                height: inherit;
+            }
+        }
         .demo-logo {
             padding: 10px 40px;
-            border: 1px solid $gris;
+            border: 1px solid $noir;
             text-transform: uppercase;
         }
         ul {
@@ -21,17 +26,19 @@ header {
             li {
                 margin-right: 40px;
                 a {
+                    color: $canari;
                     &:hover {
-                        color: $gris-moyen;
+                        color: $violet;
                     }
                 }
             }
         }
         .cta-newsletter {
-            padding : 5px 15px;
-            border-radius: 15px;
-            background-color: $gris-moyen;
-            color: white;
+            padding : 6px 20px;
+            border-radius: 20px;
+            background-color: $creme;
+            border: 1px solid $violet;
+            color: $violet;
         }
     }
     .header-bg {
