--- a/scss/main.scss
+++ b/scss/main.scss
@@ -6,19 +6,28 @@
 // styles généraux
 * {
     box-sizing: border-box;
-    font-family: "open", sans-serif ;
+}
+html {
+    overflow: hidden;
+    height: 100%;
 }
 body {
+    height: 100%;
+    overflow: auto;
+    background-color: $creme;
     margin: 0;
     padding: 0;
-    font-size: 1.2rem;
+    font-family: 'Work Sans', sans-serif;
+    color: $noir;
+}
+h1, h2 {
+    font-family: 'Quicksand', sans-serif;
+    color: $violet;
 }
 h1 {
-    font-size: 4rem;
+    text-align: center;
 }
-h2 {
-    font-size: 2rem;
-}
+
 ul {
     padding: 0;
     li {
@@ -30,8 +39,15 @@ a {
     color: unset;
     &.cta {
         padding: 20px 50px;
-        border: 1px solid $gris;
-        border-radius: 20px;
+        border: 1px solid $violet;
+        border-radius: 40px;
+        color: $violet;
+        font-weight: 700;
+        &.cta-violet {
+            background: $violet;
+            color: $canari;
+            border: none;
+        }
     }
 }
 .d-flex {
@@ -72,7 +88,7 @@ main {
                         height: 350px;
                         margin: 0 40px 0 0;
                         opacity: 1;
-                        border: 1px solid $gris;
+                        border: 1px solid $noir;
                         border-radius: 50px;
                         span {
                             opacity: 0.5;
@@ -91,16 +107,16 @@ main {
                             width: 250px;
                             height: 250px;
                             padding: 0 25px;
-                            border: 2px solid $gris;
+                            border: 2px solid $noir;
                             border-radius: 40px;
-                            box-shadow: 2px 2px 10px $gris-light;
+                            box-shadow: 2px 2px 10px $mauve;
                             &:not(:last-child) {
                                 margin-right: 30px;
                             }
                             .demo-rond {
                                 width: 60px;
                                 height: 60px;
-                                border: 2px solid $gris;
+                                border: 2px solid $noir;
                                 border-radius: 50%;
                             }
                             h3 {
@@ -110,7 +126,7 @@ main {
                                 width: 20px;
                                 height: 1px;
                                 margin: 10px 0;
-                                background-color: $gris;
+                                background-color: $noir;
                             }
                             p {
                                 margin: 0;
@@ -161,7 +177,7 @@ main {
             }
             .demo-video {
                 position: relative;
-                border: 1px solid $gris-moyen;
+                border: 1px solid $violet;
                 text-align: center;
                 text-transform: uppercase;
             }
@@ -170,15 +186,15 @@ main {
             }
             .formulaire {
                 padding: 0 100px;
-                border: 2px solid $gris-moyen;
-                box-shadow: 10px 10px 10px $gris-light;
+                border: 2px solid $violet;
+                box-shadow: 10px 10px 10px $mauve;
                 .demo-illustration {
                     width: 100%;
                     height: 150px;
                     margin: 0 0 40px 0;
                     border-radius: 25px;
                     opacity: 1;
-                    background-color: $gris-light;
+                    background-color: $mauve;
                     span {
                         opacity: 0.2;
                     }
@@ -189,7 +205,7 @@ main {
                         height: 50px;
                         margin: 0;
                         outline: none;
-                        border: 1px solid $gris;
+                        border: 1px solid $noir;
                         &#email {
                             padding-left: 50px;
                             border-radius: 25px 0 0 25px;
@@ -202,7 +218,7 @@ main {
                         &#newsletter-submit {
                             width: 150px;
                             padding: 15px 30px;
-                            background-color: $gris-light;
+                            background-color: $mauve;
                             border-radius: 0 25px 25px 0;
                             border-left: none;
                             font-weight: bold;
