maj ui header + form newsletter

--- a/scss/footer.scss
+++ b/scss/footer.scss
@@ -41,7 +41,7 @@ footer {
     .copyright {
         margin: auto;
         padding: 20px 0;
-        border-top: 1px solid $violet;
+        border-top: 1px solid $noir;
         text-transform: uppercase;
         text-align: center;
         font-size: 1rem;
