--- a/scss/fonts.css
+++ b/scss/fonts.css
@@ -1,1 +1,1 @@
-@import"https://fonts.googleapis.com/css2?family=Quicksand:wght@700&family=Work+Sans:wght@300:700&display=swap"
+@import"https://fonts.googleapis.com/css2?family=Quicksand:wght@700&family=Work+Sans:wght@100:200:300:700&display=swap";@import"https://fonts.googleapis.com/css2?family=Work+Sans:wght@200&display=swap"
