--- a/scss/header.scss
+++ b/scss/header.scss
@@ -26,7 +26,7 @@ header {
             li {
                 margin-right: 40px;
                 a {
-                    color: $canari;
+                    color: $noir;
                     &:hover {
                         color: $violet;
                     }
@@ -47,6 +47,7 @@ header {
         height: 100%;
         .more {
             margin-top: 50px;
+            font-style: italic;
         }
     }
 }
