--- a/scss/main.scss
+++ b/scss/main.scss
@@ -17,17 +17,16 @@ body {
     background-color: $creme;
     margin: 0;
     padding: 0;
-    font-size: 1.2rem;
     font-family: 'Work Sans', sans-serif;
     font-weight: 200;
     color: $noir;
 }
-h1, h2 {
+h1, h2, h3 {
     font-family: 'Quicksand', sans-serif;
     color: $violet;
 }
 h1 {
-    font-size: 2.5rem;
+    font-size: 2rem;
     text-align: center;
 }
 h2 {
@@ -48,6 +47,7 @@ a {
         border: 1px solid $violet;
         border-radius: 40px;
         color: $violet;
+        font-size: 1rem;
         font-weight: 700;
         &.cta-violet {
             background: $violet;
@@ -84,10 +84,10 @@ main {
             padding-bottom: 50px;
         }
         &.first {
-            padding-bottom: 400px;
+            padding-bottom: 300px;
             > section {
                 &:not(:last-of-type) {
-                    padding-bottom: 100px;
+                    padding-bottom: 80px;
                 }
                 &.avantages {
 
@@ -116,24 +116,29 @@ main {
                 }
                 &.valeurs {
                     h2 {
-                        margin: 0 0 60px 0;
+                        margin: 60px 0;
                     }
                     .valeurs-cartes {
                         section {
-                            width: 250px;
-                            height: 250px;
-                            padding: 0 25px;
-                            border: 2px solid $noir;
-                            border-radius: 40px;
-                            box-shadow: 2px 2px 10px $mauve;
+                            width: 350px;
+                            height: 350px;
+                            padding: 0 50px;
+                            position: relative;
                             &:not(:last-child) {
                                 margin-right: 30px;
                             }
-                            .demo-rond {
-                                width: 60px;
-                                height: 60px;
-                                border: 2px solid $noir;
-                                border-radius: 50%;
+                            &.information {
+                                background-image: url("../img/forme-declic-forme-modules.png");
+                                background-size: cover;
+                            }
+                            
+                            &.accompagnement {
+                                background-image: url("../img/forme-declic-forme-modules-2.png");
+                                background-size: cover;
+                            }
+
+                            img {
+                                width: 80px;
                             }
                             h3 {
                                 margin: 15px 0;
@@ -146,15 +151,15 @@ main {
                             }
                             p {
                                 margin: 0;
-                                padding: 0 20px;
+                                padding: 0 15px;
                                 text-align: center;
-                                font-size: 0.9rem;
+                                font-size: 1rem;
                             }
                         }
                     }
                 }
                 &.etablissement {
-                    max-width: 720px;
+                    max-width: 600px;
                     margin: auto;
                     > * {
                         text-align: center;
@@ -162,11 +167,12 @@ main {
                     .sous-titre {
                         margin-top: 0;
                         font-size: 1.5rem;
-                        font-weight: 100;
+                        font-weight: 200;
                     }
                     p {
-                        margin-top: 40px;
+                        margin: 40px 0 30px 0;
                         font-style: italic;
+                        font-size: 1rem;
                     }
                 }
             }
