connexion formulaire mailchimp

--- a/scss/main.scss
+++ b/scss/main.scss
@@ -225,7 +225,7 @@ main {
                         outline: none;
                         border: 1px solid $violet;
                         font-size: 1.17rem;
-                        &#email {
+                        &#mce-EMAIL {
                             padding-left: 50px;
                             border-radius: 50px 0 0 50px;
                             flex: 1;
@@ -234,7 +234,7 @@ main {
                                 opacity: 0.5;
                             }
                         }
-                        &#newsletter-submit {
+                        &#mc-embedded-subscribe {
                             width: 200px;
                             padding: 15px 30px;
                             background-color: $violet;
