--- a/scss/footer.scss
+++ b/scss/footer.scss
@@ -10,11 +10,13 @@ footer {
         content: "";
         display: block;
         width: 100%;
-        height: 200px;
+        height: 150px;
         position: absolute;
-        top:-199px;
-        background-image: url("../img/forme-module-3-horizontale-footer.png");
-        background-size: cover;
+        top:-149px;
+        background-image: url("../img/forme-module-3-horizontale-footer.svg");
+        background-size: 120%;
+        background-position-x: center;
+        background-repeat: no-repeat;
     }
     .footer-content {
         max-width: 720px;
@@ -22,7 +24,6 @@ footer {
         align-items: flex-start;
         justify-content: space-between;
         section {
-            width: 38%;
             h2 {
                 margin-top: 0;
                 color: $canari;
@@ -31,8 +32,67 @@ footer {
             ul {
                 line-height: 2rem;
                 padding: 0 40px 0 0;
+                li {
+                    justify-content: flex-start;
+                    align-items: flex-start;
+                    a {
+                        transition: .5s ease;
+                        &:after {
+                            content: "";
+                            display: block;
+                            height: 1px;
+                            width: 50px;
+                            opacity: 0;
+                            background-color: $mauve;
+                            transition: .5s ease;
+
+                        }
+                    }
+                    &:hover{
+                        color: $canari;
+                        a {
+                            &:after {
+                                width: 100%;
+                                opacity: 1;
+                            }
+                        }
+                    }
+                }
                 li:not(:last-child) {
                     padding-bottom: 20px;
+                }
+            }
+            &.footer-information {
+                width: 36%;
+            }
+            &.footer-contact {
+                width: 40%;
+                ul {
+                    li {
+                        
+                        &:before {
+                            display: block;
+                            width: 20px;
+                            position: relative;
+                            top: 3px;
+                            margin-right: 15px;
+                        }
+                        &:nth-child(1) {
+                            &:before {
+                                content: url("../img/localisation.svg");
+                            }
+                        }
+                        &:nth-child(2) {
+                            &:before {
+                                content: url("../img/phone.svg");
+                            }
+                        }
+                        &:nth-child(3) {
+                            &:before {
+                                content: url("../img/enveloppe.svg");
+                            }
+                        }
+                    }
                 }
             }
             &.footer-social-media {
