ajout des illudstrations flottantes

--- a/scss/header.scss
+++ b/scss/header.scss
@@ -1,6 +1,19 @@
 header {
     height: 100vh;
     background-color: $creme;
+    .illustration-flottante {
+        position: absolute;
+        &:nth-child(1) {
+            width: 300px;
+            top: 10%;
+            left: 50%;
+        }
+        &:nth-child(2) {
+            width: 500px;
+            top: 20%;
+            left: 5%;
+        }
+    }
     nav {
         width: 100%;
         height: 90px;
@@ -15,11 +28,6 @@ header {
             img {
                 height: inherit;
             }
-        }
-        .demo-logo {
-            padding: 10px 40px;
-            border: 1px solid $noir;
-            text-transform: uppercase;
         }
         ul {
             display: flex;
@@ -45,6 +53,8 @@ header {
         padding-bottom: 250px;
         justify-content: flex-end;
         height: 100%;
+        position: relative;
+        z-index: 2;
         .more {
             margin-top: 50px;
             font-style: italic;
