--- a/scss/fonts.scss
+++ b/scss/fonts.scss
@@ -1,11 +1,1 @@
-@import url('https://fonts.googleapis.com/css2?family=Quicksand:wght@700&family=Work+Sans:wght@100:200:300:700&display=swap');
-@import url('https://fonts.googleapis.com/css2?family=Work+Sans:wght@100;200;300;400;700&display=swap');
-
-@font-face {
-    font-family: 'Quicksand', sans-serif;
-    src: url("../fonts/Quicksand-VariableFont_wght.ttf");
-}
-@font-face {
-    font-family: 'Work Sans', sans-serif;
-    src: url("../fonts/WorkSans-VariableFont_wght.ttf");
-}
+@import url('https://fonts.googleapis.com/css2?family=Quicksand:wght@700&family=Work+Sans:wght@100;200;300;700&display=swap');
