--- a/scss/header.scss
+++ b/scss/header.scss
@@ -1,28 +1,79 @@
 header {
-    height: 100vh;
+    height: 900px;
     background-color: $creme;
     .illustration-flottante {
         position: absolute;
-        &:nth-child(1) {
-            width: 300px;
-            top: 10%;
-            left: 50%;
-        }
-        &:nth-child(2) {
-            width: 500px;
-            top: 20%;
-            left: 5%;
-        }
+        width: 350px;
+        top: 10%;
+        left: 30%;
     }
     nav {
         width: 100%;
         height: 90px;
-        padding: 0 80px;
         position: fixed;
         z-index: 99;
-        justify-content: space-between;
-        align-items: center;
         background-color: $creme;
+        &.nav-1 {
+            padding: 0 80px;
+            justify-content: space-between;
+        }
+        &.nav-2 {
+            //display: none;
+            svg {
+                position: relative;
+                width: 40px;
+                height: 30px;
+                rect {
+                width: 33px;
+                height: 4px;
+                fill:#61269e;
+                x: 3.5;
+                rx: 3px;
+                ry: 3px;
+                transition: .5s ease;
+                transform-origin: center;
+                }
+                &.burger-off {
+                  rect {      
+                    &:nth-child(1) {
+                      y: 7;  
+                    }
+                    &:nth-child(2) {
+                      y: 13;  
+                    }
+                    &:nth-child(3) {
+                      y: 19;  
+                    }
+                  }  
+                }
+                &.burger-on {
+                    rect {      
+                        &:nth-child(1) {
+                            x: 10;
+                            y: 15;
+                            width: 18px;
+                            transform: rotate(45deg);
+                        }
+                        &:nth-child(2) {
+                            y: 13;  
+                            opacity: 0;  
+                        }
+                        &:nth-child(3) {
+                            width: 18px;
+                            x: 09;
+                            y: 12;
+                            transform: rotate(-45deg);
+                        }
+                    }  
+                }
+                &:hover {
+                    cursor: pointer;
+                    rect {
+                        fill: $canari;
+                    }
+                }
+            }
+        }
         .nav-logo {
             height: 100%;
             img {
@@ -50,7 +101,7 @@ header {
         }
     }
     .header-bg {
-        padding-bottom: 250px;
+        padding: 0 50px 250px 40px;
         justify-content: flex-end;
         height: 100%;
         position: relative;
