--- a/scss/main.scss
+++ b/scss/main.scss
@@ -85,9 +85,10 @@ main {
             padding-bottom: 300px;
             .illustration-flottante {
                 position: absolute;
-                width: 500px;
-                top: -12%;
+                width: 350px;
+                top: -11%;
                 right: 5%;
+                transform: rotate(5deg);
             }
             > section {
                 &:not(:last-of-type) {
@@ -125,6 +126,7 @@ main {
                     img {
                         width: 450px;
                         height: 400px;
+                        min-height: 350px;
                         margin: 0 40px 0 0;
                         border-radius: 50px;
                         object-fit: cover;
