--- a/scss/responsive.scss
+++ b/scss/responsive.scss
@@ -3,6 +3,10 @@
     main {
         .main-item {
             &.first {
+                .illustration-flottante {
+                    width: 300px;
+                    top: -8%;
+                }
                 > section {
                     &.avantages {
                         &:before {
@@ -10,9 +14,10 @@
                             top: -150px;
                         }
                         &:after {
-                            height: 800px;
+                            height: 600px;
                             bottom: -150px;
-                            background-size: auto 100%;
+                            background-size: cover;
+                            background-position: bottom;
                         }
                     }
                 }
@@ -47,9 +52,6 @@
     main {
         .main-item {
             &.first {
-                .illustration-flottante {
-                    width: 250px;
-                }
                 section {
                     &.avantages {
                         img {
